# fast-duplicate-finder

./: .clang-format  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmarks/: generate.py  results.md  run.py
include/dupfinder/: finder.hpp  format.hpp  hashing.hpp  scan.hpp  types.hpp
src/: finder_v0.cpp  finder_v1.cpp  finder_v2.cpp  finder_v3.cpp  format.cpp  hashing.cpp  main.cpp  scan.cpp
tests/: CMakeLists.txt  test_finders.cpp  test_hashing.cpp  test_helpers.hpp  test_scan.cpp
